--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "btcfi-api",
-  "version": "1.0.0",
-  "description": "Bitcoin data for AI agents. No tokens. Just ship.",
+  "version": "2.0.0",
+  "description": "Bitcoin data & BTCFi intelligence for AI agents via x402 micropayments",
   "private": true,
   "scripts": {
     "dev": "next dev -p 3001",
@@ -10,13 +10,20 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "next": "^15.1.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "next": "15.1.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "tweetnacl": "1.0.3",
+    "tweetnacl-util": "0.15.1",
+    "@x402/next": "^0.1.0",
+    "@x402/core": "^0.1.0",
+    "@x402/evm": "^0.1.0",
+    "@x402/svm": "^0.1.0",
+    "@x402/fetch": "^0.1.0"
   },
   "devDependencies": {
-    "@types/node": "^22.10.0",
-    "@types/react": "^19.0.0",
-    "typescript": "^5.7.0"
+    "@types/node": "22.10.0",
+    "@types/react": "19.0.0",
+    "typescript": "5.7.0"
   }
 }
