--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "btcfi-api",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "description": "Bitcoin data & BTCFi intelligence for AI agents via x402 micropayments",
   "private": true,
   "scripts": {
@@ -14,12 +14,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "tweetnacl": "1.0.3",
-    "tweetnacl-util": "0.15.1",
-    "@x402/next": "^0.1.0",
-    "@x402/core": "^0.1.0",
-    "@x402/evm": "^0.1.0",
-    "@x402/svm": "^0.1.0",
-    "@x402/fetch": "^0.1.0"
+    "tweetnacl-util": "0.15.1"
   },
   "devDependencies": {
     "@types/node": "22.10.0",
