--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   },
   "dependencies": {
     "next": "15.1.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "tweetnacl": "1.0.3",
     "tweetnacl-util": "0.15.1"
   },
   "devDependencies": {
     "@types/node": "22.10.0",
     "@types/react": "19.0.0",
-    "typescript": "5.7.0"
+    "typescript": "^5.6.3"
   }
 }
