fix: encryption dup key, swap vercel/kv for upstash/redis, remove legacy x402

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-dom": "^19.0.0",
     "tweetnacl": "1.0.3",
     "tweetnacl-util": "0.15.1",
-    "@vercel/kv": "^2.0.0"
+    "@upstash/redis": "^1.34.0"
   },
   "devDependencies": {
     "@types/node": "22.10.0",
