--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-dom": "^19.0.0",
     "tweetnacl": "1.0.3",
     "tweetnacl-util": "0.15.1",
-    "@upstash/redis": "^1.34.0"
+    "@upstash/redis": "^1.34.0",
+    "grammy": "^1.30.0",
+    "ethers": "^6.13.0"
   },
   "devDependencies": {
     "@types/node": "22.10.0",
