--- a/sdk/package.json
+++ b/sdk/package.json
@@ -27,9 +27,9 @@
   ],
   "author": "AI Indigo <ai@aiindigo.com>",
   "license": "MIT",
-  "repository": { "type": "git", "url": "https://github.com/aiindigo/btcfi" },
+  "repository": { "type": "git", "url": "https://github.com/aiindigo925/btcfi-api" },
   "homepage": "https://btcfi.aiindigo.com",
-  "bugs": { "url": "https://github.com/aiindigo/btcfi/issues" },
+  "bugs": { "url": "https://github.com/aiindigo925/btcfi-api/issues" },
   "engines": { "node": ">=18" },
   "devDependencies": {
     "tsup": "^8.0.0",
