--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,10 @@
     {
       "path": "/api/cron/health",
       "schedule": "*/5 * * * *"
+    },
+    {
+      "path": "/api/cron/whales",
+      "schedule": "*/15 * * * *"
     }
   ],
   "headers": [
