MP5: docs consistency pass + remove private files
- Landing page: 33 endpoints (added ETH/SOL), bot 15 commands
- README: multi-chain, 33 endpoints, 15 commands with full list
- ARCHITECTURE: ETH/SOL groups, 33 total
- ROADMAP: MP5 completed (58 tasks), MP6 planned, 144+ tasks
- CHANGELOG: v4.0.0 entry with all MP5 features
- QUICKSTART: 15 bot commands
- .env.example: ETH_RPC_URL + SOL_RPC_URL uncommented
- .gitignore: block CLAUDE.md + SESSION-STATE.md
- Removed: CLAUDE.md, SESSION-STATE.md, SPEC.md (moved to btcfi-docs)

--- a/.env.example
+++ b/.env.example
@@ -32,15 +32,16 @@ TREASURY_ADDRESS_SOLANA=8f2LTSW8ffDHE1UgkkUjJXpuXpvSq8gGXtWVrGX2uRqQ
 # Primary: https://rpc.whistle.ninja/rpc
 # Fallback: https://api.mainnet-beta.solana.com
 
-# EVM chains (optional — public defaults used if not set)
-# ETH_RPC_URL=https://eth.llamarpc.com
+# EVM chains (public defaults used if not set)
+# ETH is used for /api/v1/eth/* endpoints (MP5)
+ETH_RPC_URL=https://eth.llamarpc.com
 # BNB_RPC_URL=https://bsc-dataseed1.binance.org
 # ARB_RPC_URL=https://arb1.arbitrum.io/rpc
 # BASE_RPC_URL=https://mainnet.base.org
 # AVAX_RPC_URL=https://api.avax.network/ext/bc/C/rpc
 
-# Solana (optional — public mainnet default)
-# SOL_RPC_URL=https://api.mainnet-beta.solana.com
+# Solana (used for /api/v1/sol/* endpoints, MP5)
+SOL_RPC_URL=https://api.mainnet-beta.solana.com
 
 # ============ ADMIN ============
 
